# tempo-term

./: .gitignore  CHANGELOG-NEXT.md  CONTEXT.md  NOTICE  README.md  README.zh-Hans.md  README.zh-Hant.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/tauri-security-review/: SKILL.md
.claude/skills/windows-tauri/: SKILL.md
docs/changelogs/: CHANGELOG-0.0.14.md  CHANGELOG-0.0.16.md  CHANGELOG-0.3.0.md
docs/superpowers/plans/: 2026-07-02-git-panel-batch1.md  2026-07-03-git-panel-batch2.md  2026-07-03-git-panel-batch3.md
docs/superpowers/specs/: 2026-07-02-git-panel-batch1-design.md  2026-07-03-git-panel-batch2-design.md  2026-07-03-git-panel-batch3-design.md
src/: App.test.tsx  App.tsx  App.windows.test.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/modules/: clipboard.rs  locale.rs  menu.rs  mod.rs  preview.rs
src-tauri/src/modules/claude_progress/: mod.rs
src-tauri/src/modules/claude_status_hook/: mod.rs  status-hook.sh
src-tauri/src/modules/codex_progress/: mod.rs
src-tauri/src/modules/codex_status_hook/: mod.rs
src-tauri/src/modules/fs/: mod.rs  ops.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/pr/: mod.rs
src-tauri/src/modules/pty/: mod.rs  session.rs  shell.rs
src-tauri/src/modules/secrets/: mod.rs
src-tauri/src/modules/sessions_index/: sync.rs
src-tauri/src/modules/setup/: mod.rs
src-tauri/src/modules/sftp/: mod.rs  session.rs
src-tauri/src/modules/ssh/: client.rs  forward.rs  known_hosts.rs  mod.rs  prompt.rs  session.rs
src-tauri/src/modules/status_ipc/: mod.rs
src-tauri/src/modules/sysmon/: mod.rs
src/components/: AgentIcon.tsx  Breadcrumb.test.tsx  Breadcrumb.tsx  Combobox.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EntryDropOverlay.test.tsx  EntryDropOverlay.tsx  InfoDialog.test.tsx  InfoDialog.tsx  InputContextMenu.tsx  LauncherPanel.test.tsx  LauncherPanel.tsx  MarkdownView.tsx  NotifyToast.test.tsx  NotifyToast.tsx  PaneHeader.test.tsx  PaneHeader.tsx  Sidebar.test.tsx  Sidebar.tsx  SpaceDropdown.test.tsx  SpaceDropdown.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TabsArea.test.tsx  TabsArea.tsx  TitleBar.test.tsx  TitleBar.tsx  Tooltip.test.tsx  Tooltip.tsx  inputMenuItems.test.ts  inputMenuItems.ts  menuBarMenus.test.ts  menuBarMenus.ts  paneCrumbs.ts  useIsTruncated.test.tsx  useIsTruncated.ts
src/components/lib/: tabBarDrop.test.ts  tabBarDrop.ts
src/i18n/: config.ts
src/i18n/locales/en/: ai.json  common.json  editor.json  explorer.json  gitGraph.json  notes.json  onboarding.json  settings.json  sourceControl.json  worktrees.json
src/i18n/locales/zh-Hant/: ai.json  common.json  editor.json  explorer.json  gitGraph.json  notes.json  onboarding.json  settings.json  sourceControl.json  worktrees.json
src/lib/: breadcrumb.test.ts  breadcrumb.ts  fileTree.test.ts  fileTree.ts  launchLanguage.ts  nativeMenu.test.ts  nativeMenu.ts  url.test.ts  url.ts  useCollapsedPaths.test.ts  useCollapsedPaths.ts  useMacNativeMenu.test.ts  useMacNativeMenu.ts  windowLifecycle.test.ts  windowLifecycle.ts  withMinDuration.test.ts  withMinDuration.ts
src/modules/ai/: AIView.tsx  ChatMarkdown.tsx
src/modules/ai/lib/: attachments.test.ts  attachments.ts
src/modules/ai/store/: chatStore.ts
src/modules/claude-progress/: ClaudeProgressPanel.tsx
src/modules/diff/: DiffTabContent.test.tsx  DiffTabContent.tsx
src/modules/editor/: EditorPaneHeader.test.tsx  EditorPaneHeader.tsx  EditorTabContent.savePath.test.tsx  EditorTabContent.test.tsx  EditorTabContent.tsx  EditorView.tsx
src/modules/explorer/: ExplorerView.test.tsx  ExplorerView.tsx  FileFinder.test.tsx  FileFinder.tsx  FileTree.test.tsx  FileTree.tsx
src/modules/git-graph/: CommitDetailsPanel.test.tsx  CommitDetailsPanel.tsx  DiffExplain.tsx  DiffView.test.tsx  DiffView.tsx  GitGraph.test.tsx  GitGraph.tsx  GitGraphTabContent.test.tsx  GitGraphTabContent.tsx  GitGraphToolbar.test.tsx  GitGraphToolbar.tsx  types.ts
src/modules/notes/: NoteEditor.tsx  NoteSearchBar.test.tsx  NoteSearchBar.tsx  NoteTabContent.test.tsx  NoteTabContent.tsx  NoteToc.test.tsx  NoteToc.tsx  NotesQuickAccess.test.tsx  NotesQuickAccess.tsx  NotesSidebar.test.tsx  NotesSidebar.tsx  SlashCommandList.tsx  noteSearchHighlight.ts  slashCommand.test.tsx  slashCommand.ts
src/modules/preview/: PreviewTabContent.test.tsx  PreviewTabContent.tsx
src/modules/sessions/: SessionsPanel.test.tsx  SessionsTabContent.test.tsx
src/modules/settings/: AboutSettingsSection.test.tsx  AboutSettingsSection.tsx  AiSettingsSection.tsx  SettingsView.test.tsx  SettingsView.tsx  ShortcutsSettingsSection.tsx  TerminalSettingsSection.test.tsx  TerminalSettingsSection.tsx  WorkspaceSettingsSection.test.tsx  WorkspaceSettingsSection.tsx  buildInfo.test.ts  buildInfo.ts
src/modules/setup/: SetupWizard.tsx
src/modules/source-control/: SourceControlView.test.tsx  SourceControlView.tsx
src/modules/ssh/: ConnectionForm.test.tsx  ConnectionForm.tsx  ConnectionsPanel.test.tsx  ConnectionsPanel.tsx  SshPromptDialog.tsx
src/modules/terminal/: ActionCard.test.tsx  ActionCard.tsx  PaneHeader.tsx  PaneTabContent.test.tsx  PaneTabContent.tsx  TerminalPaneHeader.test.tsx  TerminalPaneHeader.tsx  TerminalTabContent.tsx  TerminalView.tsx
src/modules/workspace/: WorkspacePanel.test.tsx  WorkspacePanel.tsx
src/modules/worktrees/: CreateWorktreeForm.test.tsx  CreateWorktreeForm.tsx  PaneWorktreeMenu.tsx  RemoveWorktreeDialog.test.tsx  RemoveWorktreeDialog.tsx  WorktreeRow.actions.test.tsx  WorktreeRow.test.tsx  WorktreeRow.tsx  WorktreesIndicator.test.tsx  WorktreesIndicator.tsx  WorktreesModal.test.tsx  WorktreesModal.tsx
src/stores/: connectionsStore.test.ts  connectionsStore.ts  fontStore.test.ts  fontStore.ts  notesStore.test.ts  notesStore.ts  notifyStore.ts  settingsStore.test.ts  settingsStore.ts  tabsStore.test.ts  tabsStore.ts  uiStore.test.ts  uiStore.ts  workspaceStore.ts
src/themes/: themes.test.ts  themes.ts
(+143 files in other folders)
