[package]
name = "tempo-term"
version = "0.0.14"
description = "TempoTerm - AI-powered terminal, editor and file explorer"
authors = ["TempoTerm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tempo_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
font-kit = "0.14"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
git2 = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "rt", "io-util", "net", "time"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
trash = "5"
notify = "6"
toml_edit = "0.22"
chrono = "0.4"
# Use russh's `ring` crypto backend instead of the default `aws-lc-rs`. aws-lc
# pulls aws-lc-sys, whose Windows build requires NASM; ring builds on Windows
# MSVC with no extra toolchain. `flate2` and `rsa` are the other defaults we keep.
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2"
orion = "0.17"
machine-uid = "0.6"
base64 = "0.22"
sysinfo = "0.33"
# Enforce a timeout on `gh` spawns (PR lookups) so a hung gh — a network stall or
# an interactive auth prompt — can never block a caller thread indefinitely.
wait-timeout = "0.2"
# Cross-platform socket->PID mapping for the port monitor. Supports macOS and
# Windows (and Linux); no subprocess spawning. get_all() returns TCP+UDP and all
# socket states, so the caller filters to TCP + LISTEN.
listeners = "0.6"

# keyring 3.x ships no credential store by default; each platform must opt into
# its native backend or every keychain operation fails silently.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
# Synchronous Win32 clipboard access (text + copied-file list) for terminal
# paste, so Ctrl+V never spawns a subprocess on the hot path.
clipboard-win = "5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
